--- a/site/index.html
+++ b/site/index.html
@@ -40,6 +40,7 @@
 <script src="https://codemirror.net/mode/javascript/javascript.js"></script>
 <script src="https://codemirror.net/mode/clike/clike.js"></script>
 <script src="https://codemirror.net/mode/python/python.js"></script>
+<script src="https://codemirror.net/mode/swift/swift.js"></script>
 
 <script src="https://unpkg.com/typescript@4.0.3/lib/typescriptServices.js"></script>
 
@@ -100,6 +101,7 @@
         <option selected="selected" value="ts">TypeScript</option>
         <option value="py">Python</option>
         <option value="cs">C#</option>
+        <option value="swift">Swift</option>
         <option value="json">JSON</option>
         <!--<option value="ast">Syntax Tree</option>-->
       </select>
@@ -237,6 +239,7 @@ function main(){
           "java":"text/x-java",
           "py":"text/x-python",
           "cs":"text/x-csharp",
+          "swift":"text/x-swift",
           "json":"javascript",
         })[targ];
       // print(mode);
