--- a/site/index.html
+++ b/site/index.html
@@ -41,6 +41,7 @@
 <script src="https://codemirror.net/mode/clike/clike.js"></script>
 <script src="https://codemirror.net/mode/python/python.js"></script>
 <script src="https://codemirror.net/mode/swift/swift.js"></script>
+<script src="https://codemirror.net/mode/lua/lua.js"></script>
 
 <script src="https://unpkg.com/typescript@4.0.3/lib/typescriptServices.js"></script>
 
@@ -102,6 +103,7 @@
         <option value="py">Python</option>
         <option value="cs">C#</option>
         <option value="swift">Swift</option>
+        <option value="lua">Lua</option>
         <option value="json">JSON</option>
         <!--<option value="ast">Syntax Tree</option>-->
       </select>
@@ -241,6 +243,7 @@ function main(){
           "cs":"text/x-csharp",
           "swift":"text/x-swift",
           "json":"javascript",
+          "lua":"text/x-lua",
         })[targ];
       // print(mode);
       try{
